fixed z-index issue with drop-down

--- a/frontend/src/shared/header/header.styles.scss
+++ b/frontend/src/shared/header/header.styles.scss
@@ -73,6 +73,7 @@
 
     .drop-down {
         position: absolute;
+        z-index: 10;
         border: 1px solid black;
         top: 62px;
         padding: 0px 0px 5px 0px;
